--- a/ui/src/views/dashboard/Dashboard.less
+++ b/ui/src/views/dashboard/Dashboard.less
@@ -9,6 +9,10 @@
     .semi-col {
       margin-bottom: 0; // Handled by Row gutter
     }
+
+    .segmentParts {
+      height: 100%;
+    }
   }
 
   &__provider-insights {
